--- a/app/globals.css
+++ b/app/globals.css
@@ -22,5 +22,9 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.custom-gradient{
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
