pdfai-chat added

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,6 @@ body {
 .custom-gradient{
   background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
+.scrollbarNone::-webkit-scrollbar {
+  display: none;
+}
